--- a/UI/StoryBoard/src/app/initial-page/initial-page.component.html
+++ b/UI/StoryBoard/src/app/initial-page/initial-page.component.html
@@ -1,19 +1,112 @@
-<div>
+<nav>
     <div class="buttonTop">
-        <button>aaaaaa</button>
+        <button><a>Adicinar Projeto</a></button>
     </div>
     <div class="itensRows">
         <div class="rows">
-            <p>Seus projetos</p>
-            <div>
-                
+            <p class="title">Seus projetos</p>
+            <div class="rowContent">
+                <div class="itemContainer">
+                    <div class="imgItem">
+    
+                    </div>
+                    <p>projeto a</p>
+                </div>
+                <div class="itemContainer">
+                    <div class="imgItem">
+    
+                    </div>
+                    <p>projeto b</p>
+                </div>
+                <div class="itemContainer">
+                    <div class="imgItem">
+    
+                    </div>
+                    <p>projeto c</p>
+                </div>
+                <div class="itemContainer">
+                    <div class="imgItem">
+    
+                    </div>
+                    <p>projeto d</p>
+                </div>
+                <div class="itemContainer">
+                    <div class="imgItem">
+    
+                    </div>
+                    <p>projeto e</p>
+                </div>
             </div>
         </div>
         <div class="rows">
-            <p>Seus favoritos</p>
+            <p class="title">Seus favoritos</p>
+            <div class="rowContent">
+                <div class="itemContainer">
+                    <div class="imgItem">
+    
+                    </div>
+                    <p>projeto a</p>
+                </div>
+                <div class="itemContainer">
+                    <div class="imgItem">
+    
+                    </div>
+                    <p>projeto b</p>
+                </div>
+                <div class="itemContainer">
+                    <div class="imgItem">
+    
+                    </div>
+                    <p>projeto c</p>
+                </div>
+                <div class="itemContainer">
+                    <div class="imgItem">
+    
+                    </div>
+                    <p>projeto d</p>
+                </div>
+                <div class="itemContainer">
+                    <div class="imgItem">
+    
+                    </div>
+                    <p>projeto e</p>
+                </div>
+            </div>
         </div>
         <div class="rows">
-            <p>Seus projetos em time</p>
+            <p class="title">Seus projetos em time</p>
+            <div class="rowContent">
+                <div class="itemContainer">
+                    <div class="imgItem">
+    
+                    </div>
+                    <p>projeto a</p>
+                </div>
+                <div class="itemContainer">
+                    <div class="imgItem">
+    
+                    </div>
+                    <p>projeto b</p>
+                </div>
+                <div class="itemContainer">
+                    <div class="imgItem">
+    
+                    </div>
+                    <p>projeto c</p>
+                </div>
+                <div class="itemContainer">
+                    <div class="imgItem">
+    
+                    </div>
+                    <p>projeto d</p>
+                </div>
+                <div class="itemContainer">
+                    <div class="imgItem">
+    
+                    </div>
+                    <p>projeto e</p>
+                </div>
+            </div>
         </div>
     </div>
-</div>
+</nav>
