--- a/UI/StoryBoard/src/app/app.component.scss
+++ b/UI/StoryBoard/src/app/app.component.scss
@@ -21,6 +21,7 @@ app-side-nav {
     box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
     background-color: #171717;
     border-top: 1px solid white;
+    border-right: 1px solid white;
     overflow-x: hidden;
     white-space: nowrap;
     transition: width 250ms ease-in;
