Exemplod de dialog

--- a/UI/StoryBoard/src/app/initial-page/initial-page.component.html
+++ b/UI/StoryBoard/src/app/initial-page/initial-page.component.html
@@ -1,6 +1,6 @@
 <nav>
     <div class="buttonTop">
-        <button><a>Adicinar Projeto</a></button>
+        <button (click)="openDialog()"><a>Adicinar Projeto</a></button>
     </div>
     <div class="itensRows">
         <div class="rows">
