--- a/UI/StoryBoard/src/styles.scss
+++ b/UI/StoryBoard/src/styles.scss
@@ -9,3 +9,5 @@ body {
     background-color: #171717;
     height: calc(100vh - 4rem);
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
