--- a/UI/StoryBoard/src/app/header/header.component.html
+++ b/UI/StoryBoard/src/app/header/header.component.html
@@ -4,7 +4,7 @@
         <i class="fa-solid  fa-bars"></i>
     </div>
 
-    <a class="navbar-brand px-4" href="#">StoryBoard</a>
+    <a class="navbar-brand px-4" >StoryBoard</a>
 
     <div class="navbar-collapse">
         <ul class="navbar-nav me-auto">
