Exemplod de dialog

--- a/UI/StoryBoard/src/app/app.component.scss
+++ b/UI/StoryBoard/src/app/app.component.scss
@@ -40,3 +40,7 @@ app-side-nav {
     width: calc(100% - 250px);
     left: 250px;
 }
+
+/*Inicio Area Destinada ao scss das dialogs*/
+
+/*Fim Area Destinada ao scss das dialogs*/
