Exemplod de dialog

--- a/UI/StoryBoard/src/app/initial-page/initial-page.component.scss
+++ b/UI/StoryBoard/src/app/initial-page/initial-page.component.scss
@@ -29,7 +29,7 @@
     .title{
         font-weight: bold;
         font-size: 1.5em;
-        color: #fff;
+        color: black;
     }
 }
 
@@ -51,7 +51,7 @@
         font-weight: 510;
         text-align: center;
         margin-top: 20px;
-        color: #fff;
+        color: black;
     }
 }
 
