--- a/UI/StoryBoard/src/styles.scss
+++ b/UI/StoryBoard/src/styles.scss
@@ -6,7 +6,7 @@ body {
     font-family: montserrat;
 }
 .display-area{
-    background-color: #171717;
+    background-color: #fff;
     height: calc(100vh - 4rem);
 }
 html, body { height: 100%; }
