criando tela de work]

--- a/UI/StoryBoard/src/styles.scss
+++ b/UI/StoryBoard/src/styles.scss
@@ -8,6 +8,7 @@ body {
 .display-area{
     background-color: #fff;
     height: calc(100vh - 4rem);
+    overflow:auto;
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
