--- a/UI/StoryBoard/src/app/app.component.scss
+++ b/UI/StoryBoard/src/app/app.component.scss
@@ -3,6 +3,7 @@ app-header {
     width: 100%;
     top: 0px;
     height: 4rem;
+    z-index: 1;
 }
 
 main {
@@ -10,7 +11,6 @@ main {
     width: 100%;
     top: 4rem;
 }
-
 app-side-nav {
     position: absolute;
     left: 0rem;
