--- a/UI/StoryBoard/src/app/header/header.component.html
+++ b/UI/StoryBoard/src/app/header/header.component.html
@@ -13,7 +13,7 @@
                     user
                 </a>
 
-                <ul class="dropdown-menu dropdown-menu-dark">
+                <ul class="dropdown-menu dropdown-menu-dark dropdownIndex">
                     <li><a class="dropdown-item" href="a">Child 1</a></li>
                     <li><a class="dropdown-item" href="a">Child 2</a></li>
                     <li><a class="dropdown-item" href="a">Child 3</a></li>
