--- a/UI/StoryBoard/src/app/project-work-page/project-work-page.component.html
+++ b/UI/StoryBoard/src/app/project-work-page/project-work-page.component.html
@@ -11,7 +11,7 @@
                     <mat-option value="2">2</mat-option>
                 </mat-select>
             </mat-form-field>
-            <button><a>Adicinar Projeto</a></button>
+            <button (click)="openDialog()"><a>Adiocinar Projeto</a></button>
         </div>
     </div>
     <div class="content">
