--- a/UI/StoryBoard/src/app/presentation-page/presentation-page.component.html
+++ b/UI/StoryBoard/src/app/presentation-page/presentation-page.component.html
@@ -1,4 +1,81 @@
-<div>
-    <h2>StoryBoard</h2>
-    <h3>Sobre nós</h3>
-</div>
+<nav>
+    <div class="content">
+        <div class="Top">
+            <div>
+                <h1 class="title">StoryBoard</h1>
+            </div>
+            <div>
+                <div class = "Btns_in_up">
+                    <button (click)="openDialogLogin()"><a>Sing In</a></button>
+                    <button (click)="openDialogRegister()"><a>Sing Up</a></button>
+                </div>
+            </div>
+        </div>
+    
+    
+        <div>
+            <h2 class = "sobre">Sobre nós</h2>
+            <p class="text_sobre">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos rem, debitis nisi sed ullam libero minima unde, vel amet aspernatur in quia veritatis excepturi ex quo expedita quam dolore.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos rem, debitis nisi sed ullam libero minima unde, vel amet aspernatur in quia veritatis excepturi ex quo expedita quam dolore.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos rem, debitis nisi sed ullam libero minima unde, vel amet aspernatur in quia veritatis excepturi ex quo expedita quam dolore.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos rem, debitis nisi sed ullam libero minima unde, vel amet aspernatur in quia veritatis excepturi ex quo expedita quam dolore.
+            </p>
+        </div>
+    
+        <div>
+            <h3 class="subtitle">Luiz F. Corcini</h3>
+        </div>
+    
+        <div class = "container">
+            <div>
+                <div class="img"></div>
+            </div>
+                
+            <div>
+                <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos rem, debitis nisi sed ullam libero minima unde, vel amet aspernatur in quia veritatis excepturi ex quo expedita quam dolore.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos rem, debitis nisi sed ullam libero minima unde, vel amet aspernatur in quia veritatis excepturi ex quo expedita quam dolore.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos rem, debitis nisi sed ullam libero minima unde, vel amet aspernatur in quia veritatis excepturi ex quo expedita quam dolore.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos rem, debitis nisi sed ullam libero minima unde, vel amet aspernatur in quia veritatis excepturi ex quo expedita quam dolore.
+                </p>
+            </div>
+        </div>
+    
+    
+        <div>
+            <h3 class="subtitle_right">Wyllyan T.Meira</h3>
+        </div>
+    
+        <div class = "container_right">
+            <div>
+                <div class="img"></div>
+            </div>
+            <div>
+                <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos rem, debitis nisi sed ullam libero minima unde, vel amet aspernatur in quia veritatis excepturi ex quo expedita quam dolore.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos rem, debitis nisi sed ullam libero minima unde, vel amet aspernatur in quia veritatis excepturi ex quo expedita quam dolore.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos rem, debitis nisi sed ullam libero minima unde, vel amet aspernatur in quia veritatis excepturi ex quo expedita quam dolore.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos rem, debitis nisi sed ullam libero minima unde, vel amet aspernatur in quia veritatis excepturi ex quo expedita quam dolore.
+                </p>
+            </div>
+        </div>
+    
+    
+        <div>
+            <h3 class="subtitle">Alexandre W.Nikitin</h3>  
+        </div>
+    
+        <div class = "container">
+            <div>
+                <div class="img"></div>
+            </div>
+        
+            <div>
+                <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos rem, debitis nisi sed ullam libero minima unde, vel amet aspernatur in quia veritatis excepturi ex quo expedita quam dolore.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos rem, debitis nisi sed ullam libero minima unde, vel amet aspernatur in quia veritatis excepturi ex quo expedita quam dolore.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos rem, debitis nisi sed ullam libero minima unde, vel amet aspernatur in quia veritatis excepturi ex quo expedita quam dolore.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos rem, debitis nisi sed ullam libero minima unde, vel amet aspernatur in quia veritatis excepturi ex quo expedita quam dolore.
+                </p>
+            </div>
+        </div>
+    </div>
+    
+</nav>
