--- a/UI/StoryBoard/src/app/header/header.component.html
+++ b/UI/StoryBoard/src/app/header/header.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark px-2">
 
     <div  class="side-nav-button p-2  me-3 text-light" (click)="SideNavToggle()">
-        <i class="fa-solid  fa-bars"></i>
+        <mat-icon>menu</mat-icon>
     </div>
 
-    <a class="navbar-brand px-4" >StoryBoard</a>
+    <a class="navbar-brand px-4">StoryBoard</a>
 
     <div class="navbar-collapse">
         <ul class="navbar-nav me-auto">
