--- a/UI/StoryBoard/src/app/initial-page/initial-page.component.html
+++ b/UI/StoryBoard/src/app/initial-page/initial-page.component.html
@@ -1,112 +1,44 @@
 <nav>
     <div class="buttonTop">
-        <button (click)="openDialog()"><a>Adicinar Projeto</a></button>
+        <button (click)="openDialog()"><a>Adicionar Projeto</a></button>
     </div>
     <div class="itensRows">
         <div class="rows">
             <p class="title">Seus projetos</p>
             <div class="rowContent">
-                <div class="itemContainer">
-                    <div class="imgItem">
-    
+                <ng-container *ngIf="(queryCommandProjects | async)?.length !== 0">
+                    <div class="itemContainer" *ngFor="let proj of queryCommandProjects | async" (click)="GoToProject(proj.project.id)">
+                        <div class="imgItem">
+                            <img src="{{proj.project.urlImage}}">
+                        </div>
+                        <p>{{proj.project.name}}</p>
                     </div>
-                    <p>projeto a</p>
-                </div>
-                <div class="itemContainer">
-                    <div class="imgItem">
-    
+                </ng-container>
+                <ng-container *ngIf="(queryCommandProjects | async)?.length === 0">
+                    <div class="itemContainer">
+                        <div class="imgItem">
+                            <img src="https://media.istockphoto.com/id/688550958/pt/vetorial/black-plus-sign-positive-symbol.jpg?s=612x612&w=0&k=20&c=3pivfI1RA8Z1TfEeDC7puMSh5ow5J5bW8XiIDfJMKIw=">
+                        </div>
+                        <p>Adicionar projeto</p>
                     </div>
-                    <p>projeto b</p>
-                </div>
-                <div class="itemContainer">
-                    <div class="imgItem">
-    
-                    </div>
-                    <p>projeto c</p>
-                </div>
-                <div class="itemContainer">
-                    <div class="imgItem">
-    
-                    </div>
-                    <p>projeto d</p>
-                </div>
-                <div class="itemContainer">
-                    <div class="imgItem">
-    
-                    </div>
-                    <p>projeto e</p>
-                </div>
+                </ng-container>
             </div>
         </div>
-        <div class="rows">
-            <p class="title">Seus favoritos</p>
-            <div class="rowContent">
-                <div class="itemContainer">
-                    <div class="imgItem">
-    
-                    </div>
-                    <p>projeto a</p>
-                </div>
-                <div class="itemContainer">
-                    <div class="imgItem">
-    
-                    </div>
-                    <p>projeto b</p>
-                </div>
-                <div class="itemContainer">
-                    <div class="imgItem">
-    
-                    </div>
-                    <p>projeto c</p>
-                </div>
-                <div class="itemContainer">
-                    <div class="imgItem">
-    
-                    </div>
-                    <p>projeto d</p>
-                </div>
-                <div class="itemContainer">
-                    <div class="imgItem">
-    
-                    </div>
-                    <p>projeto e</p>
-                </div>
-            </div>
-        </div>
+
         <div class="rows">
             <p class="title">Seus projetos em time</p>
-            <div class="rowContent">
-                <div class="itemContainer">
+            <div class="rowContent" *ngIf="(queryCommandTeamProjects | async)?.length !== 0">
+
+                <div class="itemContainer" *ngFor="let proj of queryCommandTeamProjects | async">
                     <div class="imgItem">
-    
+                        <img src="{{proj.project.urlImage}}">
                     </div>
-                    <p>projeto a</p>
-                </div>
-                <div class="itemContainer">
-                    <div class="imgItem">
-    
-                    </div>
-                    <p>projeto b</p>
-                </div>
-                <div class="itemContainer">
-                    <div class="imgItem">
-    
-                    </div>
-                    <p>projeto c</p>
-                </div>
-                <div class="itemContainer">
-                    <div class="imgItem">
-    
-                    </div>
-                    <p>projeto d</p>
-                </div>
-                <div class="itemContainer">
-                    <div class="imgItem">
-    
-                    </div>
-                    <p>projeto e</p>
+                    <p>{{proj.project.name}}</p>
                 </div>
             </div>
+            <ng-container *ngIf="(queryCommandTeamProjects | async)?.length === 0">
+                <p>PARECE QUE VOCE NÃO TEM AMIGOS :,(</p>
+            </ng-container>
         </div>
     </div>
 </nav>
