--- a/UI/StoryBoard/src/app/project-work-page/project-work-page.component.scss
+++ b/UI/StoryBoard/src/app/project-work-page/project-work-page.component.scss
@@ -67,15 +67,14 @@
     flex-direction: column;
 
     .panel {
-        width: 100%;
+      width: 100%;
+      background-color: #404040;
     }
 
     .panel:nth-child(n + 2) {
-        margin-top: 10px;
+      margin-top: 10px;
     }
 }
-
-//teste
 
 .example-container {
     width: 400px;
