--- a/UI/StoryBoard/src/app/project-work-page/project-work-page.component.scss
+++ b/UI/StoryBoard/src/app/project-work-page/project-work-page.component.scss
@@ -68,7 +68,7 @@
 
     .panel {
       width: 100%;
-      background-color: #404040;
+      background-color: #f8f9fa;
     }
 
     .panel:nth-child(n + 2) {
@@ -77,7 +77,7 @@
 }
 
 .example-container {
-    width: 400px;
+    width: 30%;
     max-width: 100%;
     margin: 0 25px 25px 0;
     display: inline-block;
