--- a/UI/StoryBoard/src/app/initial-page/components/add-project-dialog/add-project-dialog.scss
+++ b/UI/StoryBoard/src/app/initial-page/components/add-project-dialog/add-project-dialog.scss
@@ -33,7 +33,6 @@
     padding-bottom: 3em;
 }
 
-
 .button{
     border: 0;
     border-radius: 5px;
@@ -41,4 +40,10 @@
     height: 40px;
     color: rgb(255, 255, 255);
     background-color: rgb(0, 0, 0);
+}
+
+.disabled-style {
+    opacity: 0.1;
+    background-color: rgb(126, 126, 126);
+    cursor: not-allowed;
 }
