--- a/UI/StoryBoard/src/app/presentation-page/components/register-dialog/register-dialog.scss
+++ b/UI/StoryBoard/src/app/presentation-page/components/register-dialog/register-dialog.scss
@@ -24,6 +24,13 @@
     margin-top: 2em;
 }
 
+.Name{
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    margin-top: 2em;
+}
+
 .RepeatPassword{
     display: flex;
     flex-direction: row;
@@ -48,4 +55,10 @@
     color: rgb(255, 255, 255);
     background-color: rgb(0, 0, 0);
     
+}
+
+.disabled-style {
+    opacity: 0.1;
+    background-color: rgb(126, 126, 126);
+    cursor: not-allowed;
 }
