--- a/UI/StoryBoard/src/app/project-work-page/project-work-page.component.html
+++ b/UI/StoryBoard/src/app/project-work-page/project-work-page.component.html
@@ -8,10 +8,10 @@
                 <mat-label>Selecione a sprint</mat-label>
                 <mat-select value="1" (selectionChange)="onOptionSelected($event.value)">
                     <mat-option value="1">1</mat-option>
-                    <mat-option value="2">Adicionar Sprint</mat-option>
+                    <mat-option value="2" (click)="openDialogSprint()">Adicionar Sprint</mat-option>
                 </mat-select>
             </mat-form-field>
-            <button (click)="openDialog()"><a>Adiocinar Story</a></button>
+            <button (click)="openDialogStory()"><a>Adiocinar Story</a></button>
         </div>
     </div>
     <div class="content">
