--- a/UI/StoryBoard/src/app/project-work-page/components/story-list/story-list.component.html
+++ b/UI/StoryBoard/src/app/project-work-page/components/story-list/story-list.component.html
@@ -1,7 +1,7 @@
 <mat-expansion-panel hideToggle class="panel">
     <mat-expansion-panel-header>
         <mat-panel-title>
-            Exemplo de Story
+            {{Entity.name}}
         </mat-panel-title>
         <mat-icon>
             arrow_drop_down
