--- a/UI/StoryBoard/src/app/project-work-page/components/story-list/story-list.component.scss
+++ b/UI/StoryBoard/src/app/project-work-page/components/story-list/story-list.component.scss
@@ -1,6 +1,6 @@
 .panel {
   width: 100%;
-  background-color: #404040;
+  background-color: #ffffff;
 }
 
 .panel:nth-child(n + 2) {
@@ -8,7 +8,7 @@
 }
 
 .example-container {
-  width: 400px;
+  width: 30%;
   max-width: 100%;
   margin: 0 25px 25px 0;
   display: inline-block;
@@ -25,7 +25,6 @@
   justify-content: space-between;
   box-sizing: border-box;
   cursor: move;
-  background: yellow;
   font-size: 14px;
 }
 
