--- a/UI/StoryBoard/src/app/project-work-page/project-work-page.component.scss
+++ b/UI/StoryBoard/src/app/project-work-page/project-work-page.component.scss
@@ -13,13 +13,18 @@
       justify-content: center;
       align-items: center;
       color: white;
-      margin-right: 4em;
+      margin-right: 2em;
       margin-left: 1em;
     }
 
     .selector {
       height: 5em;
     }
+
+    .task{
+        margin-left: -1em;
+    }
+
 }
 
 .itensRows {
